--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -1,11 +1,45 @@
 .Project {
   &__elephant-container {
+    width: 80rem;
+    margin: 5rem auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    .project-heading {
+      font-size: 7rem;
+      font-weight: 500;
+    }
   }
 
   &__horse-container {
-    .project-heading {
-      font-size: 5rem;
-      font-weight: 500;
+    margin: 5rem 0;
+
+    .project-container {
+      display: flex;
+      justify-content: space-between;
+
+      img {
+        height: 25rem;
+        border-radius: 10px;
+      }
+
+      .project-info {
+        h1 {
+          font-size: 5rem;
+          font-weight: 500;
+          margin: 1rem 2rem;
+        }
+
+        p {
+          font-size: 1rem;
+          font-family: "space mono";
+          max-width: 35rem;
+          margin: 1rem 2rem;
+          position: relative;
+          z-index: 10;
+        }
+      }
     }
   }
 }
